--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,10 +7,15 @@
   justify-content: space-between;
   align-items: start;
   border-bottom: solid 1px gray;
-  margin-top: 20px;
+  margin-top: 35px;
   margin-left: 20px;
   margin-right: 20px;
   padding-bottom: 0;
+}
+.logo {
+  border-radius: 25px;
+  width: 24px;
+  height: 22px;
 }
 
 .headerPartOne,
@@ -21,9 +26,18 @@
   gap: 150px;
 }
 
+.headerPartTwo{
+  gap: 70px;
+
+}
+
 .title,
 .jobsIcon {
   font-size: xx-large;
+}
+
+.title {
+  color: rgb(4, 4, 185);
 }
 .loginIcon,
 .registerIcon {
