F6- Login Component Part 2

--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -36,3 +36,9 @@
   margin-bottom: 5px;
   margin-left: 10px;
 }
+
+.newToJobsphereRegister{
+    font-size: large;
+    color:rgb(4, 4, 185) ;
+    cursor: pointer;
+}
