F7- UserName on home page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,3 +77,18 @@
 .jobsIcon {
   cursor: pointer;
 }
+
+
+.userProfile {
+  display: flex
+;
+  gap: 3px;
+  font-size: xx-large;
+  color: rgb(4, 4, 185);
+  margin-right: 40px;
+}
+
+.userIcon {
+  width: 28px;
+  height: 35px;
+}
