--- a/frontend/src/components/jobs/jobs.css
+++ b/frontend/src/components/jobs/jobs.css
@@ -1,4 +1,3 @@
-
 .allJobs {
   display: flex;
   flex-direction: column;
@@ -32,23 +31,58 @@
   font-size: large;
   border-bottom: solid 1px black;
 }
-.jobsPage{
+.jobsPage {
   display: flex;
   flex-direction: column;
- 
-  
 }
-.searchBar{
+
+.searchSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1%;
+}
+
+.searchButton {
+  display: flex;
+  align-self: center;
+  background-color: rgb(4, 4, 185);
+  color: white;
+  font-size: large;
+  cursor: pointer;
+  border-radius: 20px;
+  margin-top: 35px;
+  padding: 10px;
+}
+
+.searchBar {
+  text-align: center;
   display: flex;
   margin-top: 35px;
-  padding: 20px;
- border-radius: 20px;
- width: 55%;
- align-self: center;
-
+  padding: 15px;
+  border-radius: 20px;
+  width: 45%;
+  align-self: center;
+  font-size: large;
 }
 
-.searchBar::placeholder{
+.alertMessage {
+  padding: 15px 25px;
+  background-color: rgb(4, 4, 185);
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  text-align: center;
+  position: fixed;
+  top: 50px;
+  left: 47%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.searchBar::placeholder {
   text-align: center;
   font-size: large;
 }
@@ -77,8 +111,6 @@
   padding: 20px;
   background: white;
   margin-right: 70px;
-  
-
 }
 
 .applyNow,
@@ -102,4 +134,3 @@
   gap: 5px;
   align-self: center;
 }
-
