F10- Add New Job Part 2

--- a/frontend/src/components/jobs/jobs.css
+++ b/frontend/src/components/jobs/jobs.css
@@ -27,7 +27,10 @@
 .JobTitleH,
 .DescriptionH,
 .LocationH,
-.requirmentsH {
+.requirmentsH,
+.ExperinceH,
+.RoleH,
+.SalaryRangeH {
   font-size: large;
   border-bottom: solid 1px black;
 }
