--- a/frontend/src/components/newJob/newJob.css
+++ b/frontend/src/components/newJob/newJob.css
@@ -3,15 +3,51 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: start;
+    margin-left: 30px;
     margin-top: 50px;
     gap: 15px;
+}
+
+.newJobInputs{
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 10px;
+column-gap: 30px;
+justify-items: start;
+margin-left: 30px;
+
+
+}
+
+.titleSec{
+    grid-column-start:1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+}
+.descriptionSec{
+   grid-column-start: 1;
+   grid-column-end: 3;
+   grid-row-start:2;
+   grid-row-end: 3;
+}
+
+.requirmentsSec{
+grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 3;
+grid-row-end: 4;
 }
 
 .titleText,
 .descriptionText,
 .requirmentsText,
-.locationText{ display: flex;
+.locationText,
+.experinceText,
+.roleText,
+.salaryRangeText{ display: flex;
     align-self: start;
     font-size: large;
     margin-bottom: 5px;
@@ -20,10 +56,31 @@
 
 .addJobButton{
     display: flex;
-    align-self: center;
+    align-self: start;
     background-color: rgb(4, 4, 185);
     color: white;
     font-size: large;
     cursor: pointer;
     padding: 10px;
+    margin-left: 16vw;
+  }
+
+  .textArea{
+    padding: 13px;
+padding-right: 75px;
+    text-align: start;
+    border-radius:5px;
+  }
+
+  .textArea::placeholder{
+    text-align: start;
+    font-size: large;
+
+  }
+
+  .selectRole{
+    padding: 12px;
+    padding-right: 135px;
+    text-align: start;
+    border-radius:10px;
   }
