--- a/frontend/src/components/myProfile/myProfile.css
+++ b/frontend/src/components/myProfile/myProfile.css
@@ -1,8 +1,11 @@
-
+body{
+  background-color: #F5F6F8
+}
 .myProfilePage{
     display: flex;
     flex-direction: column;
     margin-top: 40px;
+    ;
 }
 
 .jobDetails{
@@ -16,5 +19,65 @@
   padding: 15px;
   margin: 10px;
   gap: 20px;
+  /*background-color: rgb(135, 206, 235);*/
+  background-color:white;
+ color: #2D3436;
 
+}
+
+.myPostedJobs{
+  display: flex;
+  align-items: start;
+  margin-left: 5vw;
+  font-size: x-large;
+  border-bottom: solid 1px black;
+  padding-bottom: 2px;
+  justify-self: start;
+  color: rgb(4, 4, 185);
+
+}
+
+.postedJobsSection{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+}
+.numberOfApplicationsH{
+  font-size: large;
+  border-bottom: solid 1px black;
+  cursor: pointer;
+}
+
+.editJobButton{
+  display: flex;
+  align-self: center;
+  background-color: rgb(4, 4, 185);
+  color: white;
+  font-size: large;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.numberOfApplicationsSec{
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+}
+
+.viewButton{
+  display: flex;
+  align-self: center;
+  background-color: rgb(4, 4, 185);
+  color: white;
+  font-size: large;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 1px;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.numberOfApplicationsH{
+  font-weight: bold;
 }
