--- a/frontend/src/components/myProfile/myProfile.css
+++ b/frontend/src/components/myProfile/myProfile.css
@@ -81,3 +81,31 @@ body{
 .numberOfApplicationsH{
   font-weight: bold;
 }
+
+.noApplicationsMessageDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 30px;
+  gap: 5vh;
+}
+
+.seejobsButton{
+  display: flex;
+  align-self: center;
+  background-color: rgb(4, 4, 185);
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  padding:10px;
+  padding-left: 25;
+  padding-right: 25;
+  font-size: large;
+}
+
+.noApplicationMessage{
+  font-size: x-large;
+  font-weight: bold;
+
+}
