--- a/frontend/src/components/jobs/jobs.css
+++ b/frontend/src/components/jobs/jobs.css
@@ -57,6 +57,7 @@
   border-radius: 20px;
   margin-top: 35px;
   padding: 10px;
+  gap: 0.5vw;
 }
 
 .searchBar {
@@ -68,6 +69,11 @@
   width: 45%;
   align-self: center;
   font-size: large;
+}
+
+.searchIcon {
+  width: 1vw;
+  height: 1vh;
 }
 
 .alertMessage {
@@ -102,16 +108,16 @@
   justify-content: start;
   gap: 20px;
   border: solid rgb(229, 231, 235) 2px;
-  width: 75%;
+  width: 70%;
   height: 90%;
-  border-radius: 20px;
+  border-radius: 5%;
   padding: 15px;
-  margin: 10px;
+  margin: 2%;
   margin-top: 85px;
-  height: 500px;
+ 
   position: sticky;
   top: 10px;
-  padding: 20px;
+  padding: 2%;
   background: white;
   margin-right: 70px;
 }
@@ -136,4 +142,10 @@
   flex-direction: row;
   gap: 5px;
   align-self: center;
+}
+
+.upperSection {
+  padding: 10%;
+  background: linear-gradient(90deg, #f1e6f9, #4f08f5);
+  border-radius: 20px;
 }
