--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -1,5 +1,17 @@
 .loginPage {
   display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  position: fixed;
+  top: 10.1%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
+}
+.titleAndInputs {
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -37,9 +49,18 @@
   margin-left: 10px;
 }
 
-.newToJobsphereRegister{
-    font-size: large;
-    color:rgb(4, 4, 185) ;
-    cursor: pointer;
+.newToJobsphereRegister {
+  font-size: large;
+  color: rgb(4, 4, 185);
+  cursor: pointer;
 }
 
+.loginImage {
+  background-color: #f5f6f8;
+  margin-top: 100px;
+  background-color: #f5f6f8;
+  margin-top: 108px;
+  width: 35vw;
+  height: 45vh;
+  border-radius: 20px;
+}
