--- a/frontend/src/components/register/register.css
+++ b/frontend/src/components/register/register.css
@@ -1,11 +1,33 @@
-
-.registerPage{
+body{
+    background-color: #F0F4F8;
+}
+.registerTitleAndInputs{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     margin-top: 100px;
+    background-color: #F0F4F8;
 }
+
+.registerPage{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #F0F4F8;
+    padding: auto;
+  }
+
+  .registerImage{
+    background-color: #F5F6F8;
+    margin-top: 100px;
+    background-color: #F5F6F8;
+    margin-top: 108px;
+    width: 35vw;
+    height: 45vh;
+    border-radius: 20px;
+  }
 
 .registerTitle{
     font-size: x-large;
@@ -21,6 +43,7 @@
     gap: 20px;
 
 }
+
 
 .input{
     padding: 13px;
