--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  
 }
 .App {
   text-align: center;
@@ -37,7 +38,7 @@ body {
 .title,
 .jobsIcon {
   font-size: xx-large;
-  color: rgb(4, 4, 185);
+  color: #6e00be;
 }
 
 .registerIcon {
@@ -127,7 +128,8 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgb(4, 4, 185);
+  background-color: #1d1934;
+  color: white;
   padding: 10vh;
   position: relative;
   top: 14vh;
