--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  
 }
 .App {
   text-align: center;
@@ -44,7 +43,7 @@ body {
 .registerIcon {
   font-size: x-large;
   cursor: pointer;
-  background-color: #F0F4F8;
+  background-color: #f0f4f8;
   color: rgb(252, 89, 18);
   font-weight: bold;
   border: rgba(229, 231, 235, 0.658);
@@ -58,12 +57,20 @@ body {
   right: 3px;
 }
 
-.loginIcon,
+.loginIcon
+ {
+  font-size: x-large;
+  cursor: pointer;
+  background-color: #f0f4f8;
+  color: rgb(4, 4, 185);
+  border: rgba(229, 231, 235, 0) solid 2px;
+}
+
 .logout {
   font-size: x-large;
   cursor: pointer;
-  background-color: #F0F4F8;
-  color: rgb(4, 4, 185);
+  background-color: #f0f4f8;
+  color: #6e00be;
   border: rgba(229, 231, 235, 0) solid 2px;
 }
 
@@ -83,7 +90,7 @@ body {
   display: flex;
   gap: 3px;
   font-size: xx-large;
-  color: rgb(4, 4, 185);
+  color: #6e00be;
   margin-right: 40px;
 }
 
@@ -102,14 +109,14 @@ body {
   font-size: x-large;
   cursor: pointer;
   background-color: #f5f6f8;
-  color: rgb(4, 4, 185);
+  color: #6e00be;
   border: rgba(229, 231, 235, 0.658);
 }
 
 .addJobIcon {
   width: 22px;
   height: 36px;
-  color: rgb(4, 4, 185);
+  color: #6e00be;
 }
 
 .userInfo {
@@ -130,10 +137,70 @@ body {
   align-items: center;
   background-color: #1d1934;
   color: white;
-  padding: 10vh;
+  padding: 5vh;
   position: relative;
   top: 14vh;
   left: 0;
   right: 0;
   bottom: 0;
+  gap: 12vh;
 }
+
+.footerDetails {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30vw;
+}
+
+.websiteLogo {
+  display: flex;
+  flex-direction: row;
+  font-size: 3em;
+  align-self: center;
+  align-items: center;
+  position: relative;
+  top: 7vh;
+}
+
+.websiteInfo,.contactDetails {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 3vh;
+  position: relative;
+  top: 7vh;
+  font-size: large;
+}
+
+
+.contactsIcons{
+  display: flex;
+  flex-direction: row;
+   gap: 1vw;
+ 
+}
+
+.facebookIcon,
+.instagramIcon,
+.linkedinIcon{
+  width: 30%;
+    height: 32px;
+
+}
+
+.emailInFooter,.phoneNumber,.copyRight{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5vw;
+}
+.emailIcon{
+  width: 20px;
+  height: 20px;
+}
+.copyRight{
+  font-size: large;
+}
+
