--- a/frontend/src/components/applications/applications.css
+++ b/frontend/src/components/applications/applications.css
@@ -1,30 +1,27 @@
 
 
-.applicationsPage{
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
 
-}
 
 .aplicationOnJob{
     display: flex;
     align-items: start;
     margin-left: 5vw;
-    font-size: x-large;
+    font-size: large;
     border-bottom: solid 1px black;
     padding-bottom: 2px;
     justify-self: start;
     color: rgb(4, 4, 185);
     align-self: start;
+    margin-top: 50px;
 }
 
-.allApllicationSec{
+.applicationsPage{
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    margin-top: 5vh;
+    justify-items:center;
+     
+    
    
 }
 
@@ -34,7 +31,7 @@
   justify-content: space-evenly;
   align-items: center;
   border: solid rgb(229, 231, 235) 2px;
-  width: 80%;
+  width: 100%;
   border-radius: 20px;
   padding: 15px;
   margin: 10px;
