--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,8 +57,7 @@ body {
   right: 3px;
 }
 
-.loginIcon
- {
+.loginIcon {
   font-size: x-large;
   cursor: pointer;
   background-color: #f0f4f8;
@@ -164,7 +163,8 @@ body {
   top: 7vh;
 }
 
-.websiteInfo,.contactDetails {
+.websiteInfo,
+.contactDetails {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -175,32 +175,220 @@ body {
   font-size: large;
 }
 
-
-.contactsIcons{
+.contactsIcons {
   display: flex;
   flex-direction: row;
-   gap: 1vw;
- 
+  gap: 1vw;
 }
 
 .facebookIcon,
 .instagramIcon,
-.linkedinIcon{
+.linkedinIcon {
   width: 30%;
-    height: 32px;
-
+  height: 32px;
 }
 
-.emailInFooter,.phoneNumber,.copyRight{
+.emailInFooter,
+.phoneNumber,
+.copyRight {
   display: flex;
   flex-direction: row;
   gap: 0.5vw;
 }
-.emailIcon{
+.emailIcon {
   width: 20px;
   height: 20px;
 }
-.copyRight{
+.copyRight {
   font-size: large;
 }
 
+@media (max-width: 500px) {
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+    border-bottom: solid 1px gray;
+    margin-top: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-bottom: 0;
+  }
+
+  .headerPartOne,
+  .headerPartTwo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+  }
+
+  .headerPartTwo {
+    gap: 5px;
+  }
+
+  .title,
+  .jobsIcon {
+    font-size: large;
+    color: #6e00be;
+  }
+
+  .registerIcon {
+    cursor: pointer;
+    background-color: #f0f4f8;
+    color: rgb(252, 89, 18);
+    font-weight: bold;
+    border: rgba(229, 231, 235, 0.658);
+  }
+
+  .iconOfRegister {
+    width: 25px;
+    height: 23px;
+    position: relative;
+    top: 3px;
+    right: 3px;
+  }
+
+  .loginIcon {
+    cursor: pointer;
+    background-color: #f0f4f8;
+    color: rgb(4, 4, 185);
+    border: rgba(229, 231, 235, 0) solid 2px;
+  }
+
+  .logout {
+    font-size: small;
+    cursor: pointer;
+    background-color: #f0f4f8;
+    color: #6e00be;
+    border: rgba(229, 231, 235, 0) solid 2px;
+  }
+
+  .iconOfLogin {
+    width: 25px;
+    height: 23px;
+    position: relative;
+    top: 3px;
+    right: 3px;
+  }
+
+  .logo {
+    border-radius: 25px;
+    width: 16px;
+    height: 14px;
+  }
+
+  .userIcon {
+    display: none;
+    width: 16px;
+    height: 14px;
+  }
+
+  .userProfile {
+    display: flex;
+    gap: 3px;
+    font-size: small;
+    color: #6e00be;
+    margin-right: 8px;
+  }
+
+  .addJob {
+    font-size: small;
+    cursor: pointer;
+    background-color: #f5f6f8;
+    color: #6e00be;
+    border: rgba(229, 231, 235, 0.658);
+  }
+
+  .addJobIcon {
+    display: none;
+    width: 14px;
+    height: 16px;
+    color: #6e00be;
+  }
+  .iconOflogout {
+    display: none;
+  }
+
+  .jobBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: solid rgb(229, 231, 235) 2px;
+    width: 96%;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 5px;
+    gap: 10px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #1d1934;
+    color: white;
+    padding: 3vh;
+    position: relative;
+    top: 38vh;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    gap: 12vh;
+  }
+
+  .websiteLogo {
+    display: flex;
+    flex-direction: row;
+    font-size: large;
+    align-self: center;
+    align-items: center;
+    position: relative;
+    top: 5vh;
+  }
+
+  .websiteInfo,
+  .contactDetails {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.5vh;
+    position: relative;
+    top: 5vh;
+    font-size: smaller;
+  }
+
+
+
+  .footerDetails {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12vw;
+
+  }
+
+  .facebookIcon, .instagramIcon, .linkedinIcon {
+    width: 21%;
+    height: 22px;
+
+
+  }
+
+  .emailIcon {
+    width: 14px;
+    height: 14px;
+}
+
+.contactsIcons {
+  display: flex;
+  flex-direction: row;
+  gap: 3vw;
+}
+
+}
