--- a/frontend/src/components/applications/applications.css
+++ b/frontend/src/components/applications/applications.css
@@ -10,7 +10,7 @@
     border-bottom: solid 1px black;
     padding-bottom: 2px;
     justify-self: start;
-    color: rgb(4, 4, 185);
+    color: #6e00be;
     align-self: start;
     margin-top: 50px;
 }
@@ -36,7 +36,7 @@
   padding: 15px;
   margin: 10px;
   gap: 20px;
-  background-color:white;
+  background-color:#F0F4F8;
  color: #2D3436;
 }
 
