--- a/frontend/src/components/jobs/jobs.css
+++ b/frontend/src/components/jobs/jobs.css
@@ -118,7 +118,7 @@
   position: sticky;
   top: 10px;
   padding: 2%;
-  background: white;
+  background:#F0F4F8;
   margin-right: 70px;
 }
 
@@ -148,4 +148,10 @@
   padding: 10%;
   background: linear-gradient(90deg, #f1e6f9, #4f08f5);
   border-radius: 20px;
+}
+
+
+@media (max-width: 500px){
+
+  
 }
