--- a/frontend/src/components/myProfile/myProfile.css
+++ b/frontend/src/components/myProfile/myProfile.css
@@ -1,15 +1,14 @@
 /*body{
   background-color: #F5F6F8
 }*/
-.myProfilePage{
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
-    ;
+.myProfilePage {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
 }
 
-.jobDetails{
-    display: flex;
+.jobDetails {
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -19,13 +18,13 @@
   padding: 15px;
   margin: 10px;
   gap: 20px;
-  /*background-color: rgb(135, 206, 235);*/
-  background-color:white;
- color: #2D3436;
 
+  background-color: #f0f4f8;
+  color: #2d3436;
 }
 
-.myPostedJobs,.myapplication{
+.myPostedJobs,
+.myapplication {
   display: flex;
   align-items: start;
   margin-left: 5vw;
@@ -34,21 +33,21 @@
   padding-bottom: 2px;
   justify-self: start;
   color: #6e00be;
-
 }
 
-.postedJobsSection,.AllApplications{
+.postedJobsSection,
+.AllApplications {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
 }
-.numberOfApplicationsH{
+.numberOfApplicationsH {
   font-size: large;
   border-bottom: solid 1px black;
   cursor: pointer;
 }
 
-.editJobButton{
+.editJobButton {
   display: flex;
   align-self: center;
   background-color: #6e00be;
@@ -59,13 +58,13 @@
   padding: 10px;
 }
 
-.numberOfApplicationsSec{
+.numberOfApplicationsSec {
   display: flex;
   flex-direction: row;
   gap: 7px;
 }
 
-.viewButton{
+.viewButton {
   display: flex;
   align-self: center;
   background-color: #6e00be;
@@ -78,11 +77,11 @@
   padding-right: 2px;
 }
 
-.numberOfApplicationsH{
+.numberOfApplicationsH {
   font-weight: bold;
 }
 
-.noApplicationsMessageDiv{
+.noApplicationsMessageDiv {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -91,21 +90,98 @@
   gap: 5vh;
 }
 
-.seejobsButton{
+.seejobsButton {
   display: flex;
   align-self: center;
   background-color: #6e00be;
   color: white;
   cursor: pointer;
   border-radius: 10px;
-  padding:10px;
+  padding: 10px;
   padding-left: 25;
   padding-right: 25;
   font-size: large;
 }
 
-.noApplicationMessage{
+.noApplicationMessage {
   font-size: x-large;
   font-weight: bold;
+}
 
+@media (max-width: 500px) {
+  .jobDetails {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: solid rgb(229, 231, 235) 2px;
+    width: 90vw;
+    border-radius: 20px;
+    padding: 15px;
+    margin: 10px;
+    gap: 20px;
+    background-color: #f0f4f8;
+    color: #2d3436;
+    font-size: smaller;
+  }
+
+
+  .JobTitleH,
+.DescriptionH,
+.LocationH,
+.requirmentsH,
+.ExperinceH,
+.RoleH,
+.SalaryRangeH {
+  font-size: small;
+  border-bottom: solid 1px black;
+}
+
+.numberOfApplicationsH {
+  font-size: smaller;
+  border-bottom: solid 1px black;
+  cursor: pointer;
+}
+
+.editJobButton
+ {
+    display: flex
+;
+    align-self: center;
+    background-color: #6e00be;
+    color: white;
+    font-size: small;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 7px;
+}
+
+.viewButton
+
+ {
+    display: flex
+;
+    align-self: center;
+    background-color: #6e00be;
+    color: white;
+    font-size: small;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 1px;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+
+.myPostedJobs, .myapplication {
+  display: flex
+;
+  align-items: start;
+  margin-left: 5vw;
+  font-size: large;
+  border-bottom: solid 1px black;
+  padding-bottom: 2px;
+  justify-self: start;
+  color: #6e00be;
+}
 }
