--- a/frontend/src/components/applications/applications.css
+++ b/frontend/src/components/applications/applications.css
@@ -1,32 +1,24 @@
-
-
-
-
-.aplicationOnJob{
-    display: flex;
-    align-items: start;
-    margin-left: 5vw;
-    font-size: large;
-    border-bottom: solid 1px black;
-    padding-bottom: 2px;
-    justify-self: start;
-    color: #6e00be;
-    align-self: start;
-    margin-top: 50px;
+.aplicationOnJob {
+  display: flex;
+  align-items: start;
+  margin-left: 5vw;
+  font-size: large;
+  border-bottom: solid 1px black;
+  padding-bottom: 2px;
+  justify-self: start;
+  color: #6e00be;
+  align-self: start;
+  margin-top: 50px;
 }
 
-.applicationsPage{
-
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items:center;
-     
-    
-   
+.applicationsPage {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
 }
 
-.applications{
-    display: flex;
+.applications {
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -36,15 +28,51 @@
   padding: 15px;
   margin: 10px;
   gap: 20px;
-  background-color:#F0F4F8;
- color: #2D3436;
+  background-color: #f0f4f8;
+  color: #2d3436;
 }
 
-.applicationDetails{
-    font-size: large;
+.applicationDetails {
+  font-size: large;
   border-bottom: solid 1px black;
- 
 }
 
+@media (max-width: 500px) {
+  .aplicationOnJob {
+    display: flex;
+    align-items: start;
+    margin-left: 5vw;
+    border-bottom: solid 1px black;
+    padding-bottom: 2px;
+    justify-self: start;
+    color: #6e00be;
+    align-self: start;
+    margin-top: 20px;
+    font-size: small;
+  }
 
+  .applicationsPage {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: start;
+    margin-top: 5px;
+  }
 
+  .applications {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
+    border: solid rgb(229, 231, 235) 2px;
+    width: 100%;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 5px;
+    gap: 10px;
+    background-color: #f0f4f8;
+    color: #2d3436;
+    font-size: small;
+    align-items: start;
+    width: 95%;
+  }
+}
