--- a/frontend/src/components/editJob/editJob.css
+++ b/frontend/src/components/editJob/editJob.css
@@ -1,9 +1,8 @@
-
-.editJobPage{
-    margin-top: 30px;
+.editJobPage {
+  margin-top: 30px;
 }
-.jobSection{
-    display: flex;
+.jobSection {
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: start;
@@ -12,71 +11,157 @@
   padding: 15px;
   margin: 10px;
   gap: 20px;
-  background-color:#F0F4F8;
- color: #2D3436;
-
+  background-color: #f0f4f8;
+  color: #2d3436;
+  font-size: smaller;
 }
 
 .currentDescription,
-.currentRequirments{
-    display: flex;
-    align-items: start;
-    width: 60%;
+.currentRequirments {
+  display: flex;
+  align-items: start;
+  width: 60%;
 }
 
-.editButton{
+.editButton {
+  display: flex;
+  align-self: center;
+  background-color: #6e00be;
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 3px;
+}
+
+.editTitle {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: start;
+  gap: 50vw;
+}
+
+.editRequirments,
+.editDescription,
+.editTitle,
+.editLocation,
+.editExperience,
+.editRole,
+.editSalaryRange {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+  gap: 10vw;
+  border: 1px solid #4f5a5d;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.NewTitle,
+.NewDescription,
+.NewRequirments,
+.NewLocation,
+.NewExperince,
+.NewRole,
+.NewSalaryRange {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: start;
+  gap: 1vw;
+}
+
+.inputInEditJob {
+  padding: 6px;
+  border-radius: 10px;
+  padding-right: 75px;
+  border: gray solid 1px;
+}
+
+.saveChangeButton {
+  display: flex;
+  align-self: center;
+  background-color: #6e00be;
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: large;
+}
+
+@media (max-width: 500px) {
+  .editButton {
     display: flex;
     align-self: center;
     background-color: #6e00be;
     color: white;
     cursor: pointer;
     border-radius: 10px;
-    padding:3px;
+    padding: 1px;
+    font-size: small;
+  }
+
+  .currentDescription,
+.currentRequirments {
+  display: inline;
+  align-items: start;
+  width: 95%;
+  font-size: smaller;
+
 }
 
-.editTitle{
-    display: flex;
+.editRequirments, .editDescription, .editTitle, .editLocation, .editExperience, .editRole, .editSalaryRange
+ {
+    display: flex
+;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: start;
-    gap: 50vw
-    
-}
-
-.editRequirments,.editDescription,.editTitle,.editLocation,.editExperience,.editRole,.editSalaryRange{
-    display: flex;
-    flex-direction: row;
-   justify-content: space-between;
-    align-items: start;
-    gap: 10vw;
-    border: 1px solid  #4f5a5d;
+    gap: 4vw;
+    border: 1px solid #4f5a5d;
     border-radius: 10px;
     padding: 15px;
-    
 }
 
-.NewTitle,.NewDescription,.NewRequirments,.NewLocation,.NewExperince,.NewRole,.NewSalaryRange{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: start;
-    gap: 1vw
-}
-
-.inputInEditJob{
-    padding: 6px;
+.selectRole {
+    padding: 5px;
+    padding-right: 0px; 
+    text-align: start;
     border-radius: 10px;
-    padding-right: 75px;
+}
+
+.inputInEditJob {
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    border-radius: 10px;
+    padding-right: 0px;
     border: gray solid 1px;
 }
 
-.saveChangeButton{
-    display: flex;
-    align-self: center;
-    background-color: #6e00be;
-    color: white;
-    cursor: pointer;
+.NewTitle, .NewDescription, .NewRequirments, .NewLocation, .NewExperince, .NewRole, .NewSalaryRange {
+    display: flex
+;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
+    gap: 1vw;
+}
+
+.inputInEditJob {
+    padding-top: 5px;
+    padding-bottom: 5px;
     border-radius: 10px;
-    padding:10px;
-    font-size: large;
+    padding-right: 0px;
+    border: gray solid 1px;
+    width: 80%;
+    align-self: end;
+}
+
+.inputInEditJob::placeholder{
+    font-size: xx-small;
+}
+
+
 }
