--- a/frontend/src/components/apply/apply.css
+++ b/frontend/src/components/apply/apply.css
@@ -134,4 +134,13 @@
   font-size: large;
   
 }
+
+.applicationDetailsAndApplyForJob {
+  display: flex
+;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 10vh;
+}
 }
