--- a/frontend/src/components/editJob/editJob.css
+++ b/frontend/src/components/editJob/editJob.css
@@ -20,7 +20,8 @@
 .currentRequirments {
   display: flex;
   align-items: start;
-  width: 60%;
+  width: 99%;
+  align-items: self-end;
 }
 
 .editButton {
@@ -51,11 +52,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: start;
-  gap: 10vw;
+  align-items: center;
+/*  gap: 10vw;*/
   border: 1px solid #4f5a5d;
   border-radius: 10px;
   padding: 15px;
+  width: 95%;
 }
 
 .NewTitle,
@@ -88,6 +90,10 @@
   border-radius: 10px;
   padding: 10px;
   font-size: large;
+}
+
+.inputInEditJob::placeholder{
+  font-family: 'Arial', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 @media (max-width: 500px) {
