--- a/frontend/src/components/jobs/jobs.css
+++ b/frontend/src/components/jobs/jobs.css
@@ -150,6 +150,33 @@
   border-radius: 20px;
 }
 
+.filtrationBar {
+  display: flex;
+  flex-direction: row;
+  padding: 2%;
+  justify-content: space-around;
+  align-items: center;
+  align-self: center;
+  width: 93.5%;
+box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+border-radius: 10px;
+}
+
+.buttonInfiltrationBar {
+  width: calc(90% / 7);
+  height: 50px;
+  background-color: #6e00be;
+  font-size: large;
+  cursor: pointer;
+  border-radius: 5px;
+  color: white;
+}
+
+.buttonInfiltrationBar:hover {
+  transform: translateY(-5px);
+  transition: 0.7s;
+}
+
 @media (max-width: 500px) {
   .JobTitleH,
   .DescriptionH,
@@ -177,8 +204,7 @@
   }
 
   .jobBox {
-    display: flex
-;
+    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -188,5 +214,5 @@
     padding: 15px;
     margin: 10px;
     gap: 20px;
-}
+  }
 }
